--- a/src/tdc/QABundle/Resources/public/css/qa.css
+++ b/src/tdc/QABundle/Resources/public/css/qa.css
@@ -53,7 +53,8 @@ span.addedTag {
     box-shadow: 0px 1px 1px 0px rgb(40,40,40);
     margin:2px 4px;
 }
-.tags .tag a {
+.tags .tag a,
+span.tag {
     color: rgb(220,220,220);
 }
 .questionArea .answerTitle {
