--- a/src/tdc/FrontEndBundle/Resources/views/Default/faq.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/faq.html.twig
@@ -30,6 +30,12 @@
             
             <li class="question">How does TD Channel work?</li>
             <p>TD Channel is a subscription service. For a very small fee, subscribed users can access the entire TD Channel library, as well as access to our Q&A system.</p>
+
+            <li class="question">Who is responsible for TD Channel?</li>
+            <p>TD Channel is owned and operated by Rudy Cortes, a professional TD with over 12 years of professional experience. Throughout these 12 years Rudy has worked on lighting, effects and look development as a production artist. He has also worked on shader, plugin, tools, workflow and pipeline development.</p>
+
+            <li class="question">Is TD Channel in any way associated with TD-College?</li>
+            <p>The founder of TD Channel was also one of the founders of TD-College. TD Channel attempts to fill an existing void in available trainig resources. While TD-College had an online school model, TD Channel follows a subscription model, making it more convenient for users throught the world.</p>
         </div>
 
 
@@ -39,6 +45,9 @@
 
             <li class="question">Can I download the videos?</li>
             <p>The video library is available 24/7/365 and can be viewed as many times as you want. For this reason, and to protect our content from piracy, we do not provide a download option for any of our videos</p>
+
+            <li class="question">Can I purchase any of the videos independently?</li>
+            <p>We do not have support for "a la carte" video purchases. Adding such support would create extra overhead and we are trying to keep our costs down to make our service as affordable as possible.</p>
 
             <li class="question">Are any mobile devices supported?</li>
             <p>At this moment we only support streamming to computers. We do have plans to support the most popular mobile devices in the future, so stay please stay tuned.</p>
