--- a/src/tdc/FrontEndBundle/Resources/views/Default/about.html.twig
+++ b/src/tdc/FrontEndBundle/Resources/views/Default/about.html.twig
@@ -4,12 +4,17 @@
 
 {% block contentArea %}
 <div id="contentHolder" >
-    {% block body %}
+
     <h1>About</h1>
+
+    <div class="marginBox">
     <p>TD Channel is an online educational resource, commited to spreading the knowledge of core concepts of CGI production. We do not make tutorials that just teach you how to do things. We make videos that show you how things work, therefore empowering you with a different set of skills that are extremelly sought after by employers.</p>
     <p>Our service is simple: For a very low monthly payment you will get access to our complete video library, our question and asnwers service and any features that will be developed in the future</p>
-    <p>TD Channel was created by Rudy Cortes, a professional TD with over 12 years of professional experience. He has worked at Disney Animation Studios, The Orphanage, DNA Prodctions, Digital Dimension, Uncharted Territory and Blizzard Entertainment. He has conducted many internal training sessions and has always enjoyed sharing technical knowledge with those who pursuit it.<br/>
+    <p>TD Channel was created by <a href="http://rudycortes.com">Rudy Cortes</a>, a professional TD with over 12 years of professional experience. He has worked at Disney Animation Studios, The Orphanage, DNA Prodctions, Digital Dimension, Uncharted Territory and Blizzard Entertainment. He has conducted many internal training sessions and has always enjoyed sharing technical knowledge with those who pursuit it.<br/>
     He has organized and lead the presentation of a Siggraph course as well as co-authored a book on RenderMan Shading Language</p>
-    {% endblock body %}
+    <p>For more information on TD Channel and our service, please visit our <a href="{{path("tdc_front_faq")}}">F.A.Q.</a> section.</p>
+    
+    </div>
+
 </div>
 {% endblock contentArea %}
