--- a/web/public/css/TDC1/main.css
+++ b/web/public/css/TDC1/main.css
@@ -3,6 +3,7 @@ body
     background-color:rgb(220,220,220);
     margin:0px;
     font-family:arial;
+    text-align:justify;
 }
 #mainContent_hdlr {
     width:960px;
@@ -489,4 +490,12 @@ input[type='password'] {
 }
 .row_1 {
     background: rgb(225,225,225);
+}
+.marginBox {
+    margin:15px;
+    padding:15px;
+    background-color:rgb(220,220,220);
+    border:1px solid rgb(180,180,180);
+    box-shadow:0px 0px 15px 0px rgb(80,80,80);
+    border-radius:10px;
 }
